# computational-algebra

./: Cargo.toml
proj/: .gitignore  Cargo.toml  flake.nix
proj/src/: algebraic_structure.rs  factor.rs  integer_computations.rs  integers.rs  lattice.rs  lib.rs  main.rs  prime.rs  prime_statistics.rs  random.rs  tests.rs
proj/src/algebraic_structure/: finite_field.rs
proj/src/factor/: random_squares.rs
proj/src/integers/: prime.rs  prime_statistics.rs
proj/src/lattice/: methods.rs
proj/src/lattice/methods/: babai_nearest_plane.rs  basis_reduction.rs  closest_vector.rs  shortest_vector.rs  timing.rs
proj/tests/: algebraic_structure.rs  algebraic_structures.rs  prime.rs
src/: random.rs
src/algebraic_structure/: finite_field.rs  z2.rs
src/factor/: file_handler.rs  random_squares.rs
src/lattice/: methods.rs
src/lattice/methods/: basis_reduction.rs  shortest_vector.rs
tests/: prime.rs
